Added WebServiceClient class

--- a/RedStar/RedStar.csproj
+++ b/RedStar/RedStar.csproj
@@ -48,6 +48,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Core\Utils.cs" />
+    <Compile Include="Core\WebServiceClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
