--- a/WebServiceTests/WebServiceTests.csproj
+++ b/WebServiceTests/WebServiceTests.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Test\ExcelSuiteRunner.cs" />
     <Compile Include="Test\PeriodicTable.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -70,6 +71,7 @@
     <None Include="Resources\TestCaseData.xlsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="Resources\TestSuite.xlsx" />
     <None Include="test.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
