--- a/WebServiceTests/test.config
+++ b/WebServiceTests/test.config
@@ -2,7 +2,7 @@
   <!--Pre-defined config parameters-->
   <parameter name="ConfigFile" value="TestAutomation.config"/>
   <parameter name="ResourceFilesLocation" value="Resources" />
-  <parameter name="DefaultHeaders" value ="Accept : text/json, username : test1, password : test@123"/>
+  <parameter name="DefaultHeaders" value =""/>
 
   <!--User defined config parameters-->
   <parameter name="BaseEndPointUrl" value="https://team-automation-st.sndev.net:443" />
