--- a/WebServiceCSharp/WebService-CSharp.csproj
+++ b/WebServiceCSharp/WebService-CSharp.csproj
@@ -86,6 +86,9 @@
   <ItemGroup>
     <Folder Include="Framework\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="issues.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
