--- a/WebServiceTests/WebServiceTests.csproj
+++ b/WebServiceTests/WebServiceTests.csproj
@@ -60,6 +60,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main\Calculator\AdditionRequest\AdditionRequest.cs" />
+    <Compile Include="Main\Calculator\DeletionRequest\DeletionRequest.cs" />
+    <Compile Include="Main\Calculator\SubtractionRequest\SubtractionRequest.cs" />
+    <Compile Include="Main\Calculator\MultiplicationRequest\MultiplicationRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test\CalculatorTests.cs" />
     <Compile Include="Test\DataValidation.cs">
