--- a/SeleniumCSharp/SeleniumCSharp.csproj
+++ b/SeleniumCSharp/SeleniumCSharp.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Selenium\DriverCommands.cs" />
     <Compile Include="Selenium\DriverWrapper.cs" />
+    <Compile Include="Selenium\JavaScripts.cs" />
     <Compile Include="Selenium\SeleniumListener.cs" />
     <Compile Include="Selenium\WebElementWrapper.cs" />
     <Compile Include="Tests\DriverWrapperTests.cs" />
