--- a/SeleniumCSharp/test.config
+++ b/SeleniumCSharp/test.config
@@ -1,31 +1,22 @@
 ﻿<configuration>
   <!--Pre-defined config parameters-->
-  <parameter name="ConfigFile" value="TestAutomation.config"/>
+  <!--<parameter name="ConfigFile" value="TestAutomation.config"/>-->
   <parameter name="ResourceFilesLocation" value="Resources" />
   <parameter name="DefaultHeaders" value =""/>
 
   <!--User defined config parameters-->
-  <parameter name="BaseEndPointUrl" value="https://team-automation-st.sndev.net:443" />
-  <parameter name="AuthorizationHeaders" value ="Authorization : Bearer "/>
-  <parameter name="GradesURISegmet" value ="/api/v1/system/grades"/>
-  <parameter name="AuthorizationURI" value ="https://team-automation-st.sndev.net/api/oauth/token"/>
-  <parameter name="GradeSuiteFile" value ="CreatGrade_RegressionSuite"/>
-  <parameter name="FunctionalSuiteFile" value="TestSuite_SuiteSheet_YES"/>
-  <parameter name="WebServicexEndPoint" value="http://www.webservicex.net"/>
 
-  
-  
   <!-- Selenium Test configurations-->
   
     <!--BROWSER settings start-->
         <!-- Selenium_Browser values - android|chrome|firefox|htmlunit|iexplorer|iPhone|iPad|opera|safari-->
-        <parameter name="Selenium_Browser" value="iexplorer"/>
+        <parameter name="SELENIUM_BROWSER" value="firefox"/>
 
         <!--Selenium_Version - version of the browser that is needed-->
-        <parameter name="Selenium_Version" value=""/>
+        <parameter name="SELENIUM_VERSION" value=""/>
 
         <!--Selenium_Platform - platform the browser - WINDOWS|XP|VISTA|MAC|LINUX|UNIX|ANDROID-->
-        <parameter name="Selenium_Platform" value=""/>
+        <parameter name="SELENIUM_PLATFORM" value=""/>
         
         <!--The full path to the directory containing ChromeDriver.exe-->
         <parameter name="chromeDriverDirectory" value="C:\ChromeDriver_2.9_32Bit"/>
@@ -40,13 +31,13 @@
 
     <!--Selenium GRID2 config start-->
         <!--Grid value can be local/saucelabs/grid2-->
-        <parameter name="Grid" value="local"/>
+        <parameter name="GRID" value="local"/>
 
         <!--Selnium_Host is the ip/serverName of grid2 hub, Used when grid value is 'remote'-->
-        <parameter name="Selenium_Host" value="localhost"/>
+        <parameter name="SELENIUM_HOST" value="localhost"/>
 
         <!--Selnium_Host is the port number in which grid2 hub listens, Used when grid value is 'remote'-->
-        <parameter name="Selenium_Port" value="4444"/>
+        <parameter name="SELENIUM_PORT" value="4444"/>
     <!--Selenium GRID2 config end-->
 
     <!--Selenium SACUCELABS config start-->
