updated DriverUtils added logging

--- a/SeleniumCSharp/test.config
+++ b/SeleniumCSharp/test.config
@@ -30,8 +30,8 @@
   <!--BROWSER settings end-->
 
     <!--Selenium GRID2 config start-->
-        <!--Grid value can be local/saucelabs/grid2-->
-        <parameter name="GRID" value="local"/>
+        <!--Grid value can be local|saucelabs|grid2-->
+        <parameter name="GRID" value="grid2"/>
 
         <!--Selnium_Host is the ip/serverName of grid2 hub, Used when grid value is 'remote'-->
         <parameter name="SELENIUM_HOST" value="localhost"/>
