Updated Sauce Labs username

--- a/SeleniumCSharp/test.config
+++ b/SeleniumCSharp/test.config
@@ -42,10 +42,10 @@
 
     <!--Selenium SACUCELABS config start-->
         <!--SAUCE_USERNAME  Used when grid value is 'saucelabs'-->
-        <parameter name="SAUCE_USERNAME" value=""/>
+        <parameter name="SAUCE_USERNAME" value="pras-loyol"/>
 
         <!--SAUCE_ACCESS_KEY Used when grid value is 'saucelabs'-->
-        <parameter name="SAUCE_ACCESS_KEY" value=""/>
+        <parameter name="SAUCE_ACCESS_KEY" value="57abad2c-ba17-4ec0-a6fb-74717aef4b41"/>
 
     <!--Selenium SACUCELABS config end-->
 
