changed grid to saucelabs

--- a/SeleniumCSharp/test.config
+++ b/SeleniumCSharp/test.config
@@ -31,7 +31,7 @@
 
     <!--Selenium GRID2 config start-->
         <!--Grid value can be local|saucelabs|grid2-->
-        <parameter name="GRID" value="grid2"/>
+        <parameter name="GRID" value="saucelabs"/>
 
         <!--Selnium_Host is the ip/serverName of grid2 hub, Used when grid value is 'remote'-->
         <parameter name="SELENIUM_HOST" value="localhost"/>
