Fixed SauceLabs issue

--- a/SeleniumCSharp/test.config
+++ b/SeleniumCSharp/test.config
@@ -10,13 +10,13 @@
   
     <!--BROWSER settings start-->
         <!-- Selenium_Browser values - android|chrome|firefox|htmlunit|iexplorer|iPhone|iPad|opera|safari-->
-        <parameter name="SELENIUM_BROWSER" value="firefox"/>
+        <parameter name="SELENIUM_BROWSER" value="chrome"/>
 
         <!--Selenium_Version - version of the browser that is needed-->
-        <parameter name="SELENIUM_VERSION" value=""/>
+        <parameter name="SELENIUM_VERSION" value="50"/>
 
         <!--Selenium_Platform - platform the browser - WINDOWS|XP|VISTA|MAC|LINUX|UNIX|ANDROID-->
-        <parameter name="SELENIUM_PLATFORM" value=""/>
+        <parameter name="SELENIUM_PLATFORM" value="Windows 2012 R2"/>
         
         <!--The full path to the directory containing ChromeDriver.exe-->
         <parameter name="chromeDriverDirectory" value="C:\ChromeDriver_2.9_32Bit"/>
