--- a/WebServiceTests/test.config
+++ b/WebServiceTests/test.config
@@ -5,16 +5,15 @@
   <parameter name="DefaultHeaders" value =""/>
 
   <!--User defined config parameters-->
-  <parameter name="BaseEndPointUrl" value="https://team-automation-st.sndev.net:443" />
+  <parameter name="BaseEndPointUrl" value="https://team-automation-release-st.sndev.net:443" />
   <parameter name="AuthorizationHeaders" value ="Authorization : Bearer "/>
   <parameter name="GradesURISegmet" value ="/api/v1/system/grades"/>
-  <parameter name="AuthorizationURI" value ="https://team-automation-st.sndev.net/api/oauth/token"/>
+  <parameter name="AuthorizationURI" value ="https://team-automation-release-st.sndev.net/api/oauth/token"/>
   <parameter name="GradeSuiteFile" value ="CreatGrade_RegressionSuite"/>
   <parameter name="FunctionalSuiteFile" value="TestSuite_SuiteSheet_YES"/>
   <parameter name="WebServicexEndPoint" value="http://www.webservicex.net"/>
 
-  
-  
+   
   <!-- Selenium Test configurations-->
   
     <!--BROWSER settings start-->
