--- a/SeleniumCSharp/test.config
+++ b/SeleniumCSharp/test.config
@@ -2,21 +2,21 @@
   <!--Pre-defined config parameters-->
   <!--<parameter name="ConfigFile" value="TestAutomation.config"/>-->
   <parameter name="ResourceFilesLocation" value="Resources" />
-  <parameter name="DefaultHeaders" value =""/>
-
+  <parameter name="StartingUrl" value ="https://team-automation-st.sndev.net/"/>
+  
   <!--User defined config parameters-->
 
   <!-- Selenium Test configurations-->
   
     <!--BROWSER settings start-->
-        <!-- Selenium_Browser values - android|chrome|firefox|htmlunit|iexplorer|iPhone|iPad|opera|safari-->
+        <!-- Selenium_Browser values - android|chrome|firefox|htmlunit|internet explorer|iexplorer|iPhone|iPad|opera|safari-->
         <parameter name="SELENIUM_BROWSER" value="chrome"/>
 
         <!--Selenium_Version - version of the browser that is needed-->
-        <parameter name="SELENIUM_VERSION" value="50"/>
+        <parameter name="SELENIUM_VERSION" value=""/>
 
         <!--Selenium_Platform - platform the browser - WINDOWS|XP|VISTA|MAC|LINUX|UNIX|ANDROID-->
-        <parameter name="SELENIUM_PLATFORM" value="Windows 2012 R2"/>
+        <parameter name="SELENIUM_PLATFORM" value=""/>
         
         <!--The full path to the directory containing ChromeDriver.exe-->
         <parameter name="chromeDriverDirectory" value="C:\ChromeDriver_2.9_32Bit"/>
@@ -31,7 +31,7 @@
 
     <!--Selenium GRID2 config start-->
         <!--Grid value can be local|saucelabs|grid2-->
-        <parameter name="GRID" value="saucelabs"/>
+        <parameter name="GRID" value="local"/>
 
         <!--Selnium_Host is the ip/serverName of grid2 hub, Used when grid value is 'remote'-->
         <parameter name="SELENIUM_HOST" value="localhost"/>
