--- a/SeleniumCSharp/SeleniumCSharp.csproj
+++ b/SeleniumCSharp/SeleniumCSharp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Selenium\SeleniumListener.cs" />
     <Compile Include="Selenium\WebElementWrapper.cs" />
     <Compile Include="Tests\DemoTest.cs" />
+    <Compile Include="Tests\DriverCommandsTests.cs" />
     <Compile Include="Tests\DriverWrapperTests.cs" />
     <Compile Include="Tests\Main\LoginPage.cs" />
   </ItemGroup>
