Timeouts configuration externalised to test.config file

--- a/SeleniumCSharp/test.config
+++ b/SeleniumCSharp/test.config
@@ -1,12 +1,13 @@
 ﻿<configuration>
   <!--Pre-defined config parameters-->
-  <!--<parameter name="ConfigFile" value="TestAutomation.config"/>-->
+  <!-- Location where the Resource files like Excel files, text files are present-->
   <parameter name="ResourceFilesLocation" value="Resources" />
-  <parameter name="StartingUrl" value ="https://team-automation-st.sndev.net/"/>
   
-  <!--User defined config parameters-->
 
   <!-- Selenium Test configurations-->
+    
+    <!-- whenever a new driver is requested, the starting Url will be launched in the driver-->
+    <parameter name="StartingUrl" value ="https://team-automation-st.sndev.net/"/>
   
     <!--BROWSER settings start-->
         <!-- Selenium_Browser values - android|chrome|firefox|htmlunit|internet explorer|iexplorer|iPhone|iPad|opera|safari-->
@@ -42,12 +43,30 @@
 
     <!--Selenium SACUCELABS config start-->
         <!--SAUCE_USERNAME  Used when grid value is 'saucelabs'-->
-        <parameter name="SAUCE_USERNAME" value="pras-loyol"/>
+        <parameter name="SAUCE_USERNAME" value="sauceUserName"/>
 
         <!--SAUCE_ACCESS_KEY Used when grid value is 'saucelabs'-->
-        <parameter name="SAUCE_ACCESS_KEY" value="57abad2c-ba17-4ec0-a6fb-74717aef4b41"/>
+        <parameter name="SAUCE_ACCESS_KEY" value="SauceAccessKey"/>
 
     <!--Selenium SACUCELABS config end-->
+
+   <!--Selenium Timeouts config start-->
+        <!--Selenium implicit timeout in seconds-->
+        <parameter name="ImplicitTimeout" value="30"/>
+
+        <!--Selenium Page Load Timeout in seconds-->
+        <parameter name="PageLoadTimeout" value="30"/>
+  
+        <!--Selenium Javascript Timeout in seconds-->
+        <parameter name="JavascriptTimeout" value="30"/>
+       
+        <!--Selenium ElementWait Timeout in seconds-->
+        <parameter name="ElementWaitTimeout" value="30"/>
+  
+        <!--Selenium ElementWait Timeout in milliseconds-->
+        <parameter name="PollingInterVal" value="300"/>
+
+    <!--Selenium Timeouts config end-->
 
   <!-- Selenium Test configurations end-->
 
