--- a/WebServiceCSharp/WebService-CSharp.csproj
+++ b/WebServiceCSharp/WebService-CSharp.csproj
@@ -84,14 +84,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Data\" />
-    <Folder Include="Framework\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="issues.txt" />
-    <Content Include="OverallStatus.txt" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
