Created Utils Project - Updated WebServiceCSharp, WebServiceTests projects

--- a/WebServiceCSharp/WebService-CSharp.csproj
+++ b/WebServiceCSharp/WebService-CSharp.csproj
@@ -43,13 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\Config.cs" />
-    <Compile Include="Core\Logger.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Core\Utils.cs" />
     <Compile Include="Core\WebServiceClient.cs" />
-    <Compile Include="Core\Data.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -84,7 +78,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Utils\Utils.csproj">
+      <Project>{0c99f43a-c765-4375-a9f2-204acd9ff515}</Project>
+      <Name>Utils</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
