--- a/SeleniumCSharp/SeleniumCSharp.csproj
+++ b/SeleniumCSharp/SeleniumCSharp.csproj
@@ -64,13 +64,16 @@
     <Compile Include="Selenium\SelectElementWrapper.cs" />
     <Compile Include="Selenium\SeleniumListener.cs" />
     <Compile Include="Selenium\Table.cs" />
+    <Compile Include="Selenium\UI\TableFooterRow.cs" />
     <Compile Include="Selenium\UI\TableHeaderRow.cs" />
     <Compile Include="Selenium\UI\TableRow.cs" />
     <Compile Include="Selenium\WebElementWrapper.cs" />
     <Compile Include="Tests\DemoTest.cs" />
     <Compile Include="Tests\DriverWrapperTests.cs" />
+    <Compile Include="Tests\Main\Components\ItemProperties.cs" />
     <Compile Include="Tests\Main\Components\TestCentralRow.cs" />
     <Compile Include="Tests\Main\LoginPage.cs" />
+    <Compile Include="Tests\TableTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
