--- a/WebServiceTests/WebServiceTests.csproj
+++ b/WebServiceTests/WebServiceTests.csproj
@@ -114,8 +114,13 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\Calculator\AddRequest.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Resources\Calculator\ResponsePerformAddition.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Resources\Calculator\ResponsePerformDivision.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
