--- a/SeleniumCSharp/SeleniumCSharp.csproj
+++ b/SeleniumCSharp/SeleniumCSharp.csproj
@@ -57,13 +57,13 @@
     <Compile Include="Framework\DriverUtils.cs" />
     <Compile Include="Framework\TestConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Selenium\Component.cs" />
-    <Compile Include="Selenium\ComponentCollection.cs" />
+    <Compile Include="Selenium\UI\Component.cs" />
+    <Compile Include="Selenium\UI\ComponentCollection.cs" />
     <Compile Include="Selenium\DriverWrapper.cs" />
     <Compile Include="Selenium\JavaScripts.cs" />
     <Compile Include="Selenium\SelectElementWrapper.cs" />
     <Compile Include="Selenium\SeleniumListener.cs" />
-    <Compile Include="Selenium\Table.cs" />
+    <Compile Include="Selenium\UI\Table.cs" />
     <Compile Include="Selenium\UI\TableFooterRow.cs" />
     <Compile Include="Selenium\UI\TableHeaderRow.cs" />
     <Compile Include="Selenium\UI\TableRow.cs" />
