--- a/SeleniumCSharp/SeleniumCSharp.csproj
+++ b/SeleniumCSharp/SeleniumCSharp.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Framework\DriverUtils.cs" />
     <Compile Include="Framework\TestConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Selenium\ByUtil.cs" />
     <Compile Include="Selenium\UI\Component.cs" />
     <Compile Include="Selenium\UI\ComponentCollection.cs" />
     <Compile Include="Selenium\DriverWrapper.cs" />
