Updated Select Element

--- a/SeleniumCSharp/test.config
+++ b/SeleniumCSharp/test.config
@@ -5,8 +5,16 @@
   
 
   <!-- Selenium Test configurations-->
-    
-    <!-- whenever a new driver is requested, the starting Url will be launched in the driver-->
+  
+  <!-- Job Name will be used to update sauce labs automatoin Job Name, when used with jenkins it will be overriden by jenkins job-->
+  <parameter name="JOB_NAME" value="AutomationTest"/>
+
+  <!-- Build number will be used to update sauce labs automatoin build number, when used with jenkins it will be overriden by jenkins job-->
+  <parameter name="BUILD_NUMBER" value="1"/>
+
+
+
+  <!-- whenever a new driver is requested, the starting Url will be launched in the driver-->
     <parameter name="StartingUrl" value ="https://team-automation-st.sndev.net/"/>
   
     <!--BROWSER settings start-->
