--- a/SeleniumCSharp/test.config
+++ b/SeleniumCSharp/test.config
@@ -66,9 +66,13 @@
         <!--Selenium ElementWait Timeout in milliseconds-->
         <parameter name="PollingInterVal" value="300"/>
 
-    <!--Selenium Timeouts config end-->
+    <!--Selenium Timeouts config end--> 
 
   <!-- Selenium Test configurations end-->
-
-
+  <!--Extent Report settings-->
+        <!--Extent Report HTML file relative path-->
+        <parameter name="ExtentReportFileName" value="Result.html"/>    
+        <!--Extent Report Config File relative path-->
+        <parameter name="ExtentReportConfigFile" value="extent-config.xml"/>
+  <!--Extent Report settings end--> 
 </configuration>
