--- a/SeleniumCSharp/test.config
+++ b/SeleniumCSharp/test.config
@@ -15,7 +15,7 @@
 
 
   <!-- whenever a new driver is requested, the starting Url will be launched in the driver-->
-    <parameter name="StartingUrl" value ="https://team-automation-st.sndev.net/"/>
+    <parameter name="StartingUrl" value ="https://www-dv.techsoup.org/"/>
   
     <!--BROWSER settings start-->
         <!-- Selenium_Browser values - android|chrome|firefox|htmlunit|internet explorer|iexplorer|iPhone|iPad|opera|safari-->
@@ -25,10 +25,10 @@
         <parameter name="SELENIUM_VERSION" value=""/>
 
         <!--Selenium_Platform - platform the browser - WINDOWS|XP|VISTA|MAC|LINUX|UNIX|ANDROID-->
-        <parameter name="SELENIUM_PLATFORM" value=""/>
+        <parameter name="SELENIUM_PLATFORM" value="ANDROID"/>
         
         <!--The full path to the directory containing ChromeDriver.exe-->
-        <parameter name="chromeDriverDirectory" value="C:\ChromeDriver_2.9_32Bit"/>
+        <parameter name="chromeDriverDirectory" value="C:\ChromeDriverUpdated"/>
 
         <!--The full path to the directory containing IEDriverServer.exe-->
         <parameter name="IEDriverServerDirectory" value="C:\IEDriver_2.42_32Bit"/>
@@ -40,7 +40,7 @@
 
     <!--Selenium GRID2 config start-->
         <!--Grid value can be local|saucelabs|grid2-->
-        <parameter name="GRID" value="local"/>
+        <parameter name="GRID" value="saucelabs"/>
 
         <!--Selnium_Host is the ip/serverName of grid2 hub, Used when grid value is 'remote'-->
         <parameter name="SELENIUM_HOST" value="localhost"/>
@@ -51,10 +51,10 @@
 
     <!--Selenium SACUCELABS config start-->
         <!--SAUCE_USERNAME  Used when grid value is 'saucelabs'-->
-        <parameter name="SAUCE_USERNAME" value="sauceUserName"/>
+        <parameter name="SAUCE_USERNAME" value="manimarankrishnan"/>
 
         <!--SAUCE_ACCESS_KEY Used when grid value is 'saucelabs'-->
-        <parameter name="SAUCE_ACCESS_KEY" value="SauceAccessKey"/>
+        <parameter name="SAUCE_ACCESS_KEY" value="53c1bfdc-eda9-4357-b6cf-a1b0fbfcfe74"/>
 
     <!--Selenium SACUCELABS config end-->
 
@@ -63,7 +63,7 @@
         <parameter name="ImplicitTimeout" value="5"/>
 
         <!--Selenium Page Load Timeout in seconds-->
-        <parameter name="PageLoadTimeout" value="30"/>
+        <parameter name="PageLoadTimeout" value="60"/>
   
         <!--Selenium Javascript Timeout in seconds-->
         <parameter name="JavascriptTimeout" value="30"/>
