--- a/SeleniumCSharp/test.config
+++ b/SeleniumCSharp/test.config
@@ -25,7 +25,7 @@
         <parameter name="SELENIUM_VERSION" value=""/>
 
         <!--Selenium_Platform - platform the browser - WINDOWS|XP|VISTA|MAC|LINUX|UNIX|ANDROID-->
-        <parameter name="SELENIUM_PLATFORM" value="ANDROID"/>
+        <parameter name="SELENIUM_PLATFORM" value="WINDOWS"/>
         
         <!--The full path to the directory containing ChromeDriver.exe-->
         <parameter name="chromeDriverDirectory" value="C:\ChromeDriverUpdated"/>
@@ -40,7 +40,7 @@
 
     <!--Selenium GRID2 config start-->
         <!--Grid value can be local|saucelabs|grid2-->
-        <parameter name="GRID" value="saucelabs"/>
+        <parameter name="GRID" value="local"/>
 
         <!--Selnium_Host is the ip/serverName of grid2 hub, Used when grid value is 'remote'-->
         <parameter name="SELENIUM_HOST" value="localhost"/>
